--- a/build
+++ b/build
@@ -7,4 +7,4 @@ cd /home/zeno/.software/aips2sqlite/jars/downloads/
 #wget http://pillbox.oddb.org/amiko_db_full_idx_de.zip
 #unzip amiko_db_full_idx_de.zip
 rm amiko_db_full_idx_de.zip
-time cpp2sqlite --inDir /home/zeno/.software/aips2sqlite/jars/downloads/
+time cpp2sqlite --verbose --inDir /home/zeno/.software/aips2sqlite/jars/downloads/
