verify all GTIN checksums

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(cpp2sqlite
 	refdata.hpp refdata.cpp
 	swissmedic.hpp swissmedic.cpp
 	bag.hpp bag.cpp
+	gtin.hpp gtin.cpp
 	medicine.h)
 
 target_link_libraries(cpp2sqlite ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
