ATC recovery and validation (in progress)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(cpp2sqlite
 	bag.hpp bag.cpp
 	gtin.hpp gtin.cpp
 	beautify.hpp beautify.cpp
+	atc.hpp atc.cpp
 	medicine.h)
 
 target_link_libraries(cpp2sqlite ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
