--- a/build
+++ b/build
@@ -1,15 +1,30 @@
+#!/bin/bash
+
 git pull
 git submodule init
 git submodule update
-sudo rm -rf /home/zeno/.software/cpp2sqlite/cpp2sqlite-build
-mkdir /home/zeno/.software/cpp2sqlite/cpp2sqlite-build
-cd /home/zeno/.software/cpp2sqlite/cpp2sqlite-build
-cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local/bin/ -DXLNT_DIR=/usr/local -D  XLNT_LIBRARY_DIRS=/usr/local ../
+
+SRC_DIR=$(pwd)
+BLD_DIR="$HOME/.software/cpp2sqlite/cpp2sqlite-build"
+BIN_DIR=/usr/local/bin/
+
+sudo rm -rf $BLD_DIR
+mkdir -p $BLD_DIR
+cd $BLD_DIR
+
+cmake -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=$BIN_DIR \
+    -DXLNT_DIR=/usr/local \
+    -D XLNT_LIBRARY_DIRS=/usr/local \
+    $SRC_DIR
+
 make -j9
 sudo make install
+
 #cd /tmp
 #wget http://pillbox.oddb.org/amiko_db_full_idx_de.zip
 #unzip amiko_db_full_idx_de.zip
 #rm amiko_db_full_idx_de.zip
-cd /home/zeno/.software/cpp2sqlite/cpp2sqlite-build
-time cpp2sqlite --verbose --inDir /home/zeno/.software/aips2sqlite/jars/downloads/
+
+cd $BLD_DIR  # it should be $BIN_DIR
+time cpp2sqlite --verbose --inDir $HOME/.software/aips2sqlite/jars/downloads/
