--- a/build
+++ b/build
@@ -12,6 +12,8 @@ sudo rm -rf $BLD_DIR
 mkdir -p $BLD_DIR
 cd $BLD_DIR
 
+/home/zeno/.software/cpp2sqlite/scripts/download.sh
+
 cmake -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=$BIN_DIR \
     -DXLNT_DIR=/usr/local \
@@ -22,4 +24,5 @@ make -j9
 sudo make install
 
 cd $BLD_DIR  # it should be $BIN_DIR
-time cpp2sqlite --verbose --inDir $HOME/.software/cpp2sqlite/input/
+time cpp2sqlite --verbose --lang=fr --inDir $HOME/.software/cpp2sqlite/input/
+#time cpp2sqlite --verbose --inDir $HOME/.software/cpp2sqlite/input/
