--- a/build
+++ b/build
@@ -5,14 +5,14 @@ git submodule init
 git submodule update
 
 SRC_DIR=$(pwd)
-BLD_DIR="$HOME/.software/cpp2sqlite/cpp2sqlite-build"
+BLD_DIR="$SRC_DIR/build"
 BIN_DIR=/usr/local/bin/
 
 sudo rm -rf $BLD_DIR
 mkdir -p $BLD_DIR
 cd $BLD_DIR
 
-pushd $HOME/.software/cpp2sqlite/scripts
+pushd scripts
 ./download.sh
 popd
 
@@ -26,5 +26,5 @@ make -j9
 sudo make install
 
 cd $BLD_DIR  # it should be $BIN_DIR
-time cpp2sqlite --verbose --lang=fr --inDir $HOME/.software/cpp2sqlite/input/
-#time cpp2sqlite --verbose --inDir $HOME/.software/cpp2sqlite/input/
+time cpp2sqlite --verbose --lang=fr --inDir $SRC_DIR/input
+#time cpp2sqlite --verbose --inDir $HOME/.software/cpp2sqlite/input
