Issue #46 use names from atc_codes_multi_lingual.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_executable(interaction
 	src/int/lang/en.h
 	src/int/lang/de.h
 	src/int/lang/fr.h
+	src/int/atc.hpp src/int/atc.cpp
 	src/int/main.cpp)
 
 target_include_directories(interaction PUBLIC "${CMAKE_SOURCE_DIR}/src/int")
