Issue #89 create rose_db_new_full.db (in progress)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,10 +97,12 @@ target_link_libraries(pharma ${Boost_LIBRARIES} ${XLNT_LIBRARIES})
 
 #-------------------------------------------------------------------------------
 add_executable(zurrose
-	src/zur/main.cpp)
+	src/zur/main.cpp
+	src/zur/Article.hpp src/zur/Article.cpp
+	src/zur/sqlDatabase.hpp src/zur/sqlDatabase.cpp)
 
 target_include_directories(zurrose PUBLIC "${CMAKE_SOURCE_DIR}/src/zur")
-target_link_libraries(zurrose ${Boost_LIBRARIES} ${XLNT_LIBRARIES})
+target_link_libraries(zurrose ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
 
 #-------------------------------------------------------------------------------
 
