--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,9 @@ add_executable(zurrose
 	src/zur/sqlDatabase.hpp src/zur/sqlDatabase.cpp
 	src/zur/stamm.hpp src/zur/stamm.cpp)
 
-target_include_directories(zurrose PUBLIC "${CMAKE_SOURCE_DIR}/src/zur")
+target_include_directories(zurrose PUBLIC
+			"${CMAKE_SOURCE_DIR}/src"
+			"${CMAKE_SOURCE_DIR}/src/zur")
 target_link_libraries(zurrose ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
 
 #-------------------------------------------------------------------------------
