--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,8 @@ add_executable(zurrose
 	src/zur/nota.hpp src/zur/nota.cpp
 	src/report.hpp src/report.cpp
 	src/zur/sqlDatabase.hpp src/zur/sqlDatabase.cpp
-	src/zur/stamm.hpp src/zur/stamm.cpp)
+	src/zur/stamm.hpp src/zur/stamm.cpp
+	src/zur/voll.hpp src/zur/voll.cpp)
 
 target_include_directories(zurrose PUBLIC
 			"${CMAKE_SOURCE_DIR}/src"
