Module to read xml file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,9 +83,11 @@ target_link_libraries(interaction ${Boost_LIBRARIES})
 
 #-------------------------------------------------------------------------------
 add_executable(sai
-	src/sai/main.cpp)
-target_include_directories(sai PUBLIC "${CMAKE_SOURCE_DIR}/src/sai")
-target_link_libraries(sai ${Boost_LIBRARIES} ${XLNT_LIBRARIES})
+	src/sai/main.cpp
+	src/sqlDatabase.hpp src/sqlDatabase.cpp
+	src/sai/sai.hpp src/sai/sai.cpp)
+target_include_directories(sai PUBLIC "${CMAKE_SOURCE_DIR}/src" "${CMAKE_SOURCE_DIR}/src/sai")
+target_link_libraries(sai ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
 
 #-------------------------------------------------------------------------------
 add_executable(sappinfo
