--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ add_executable(sai
 	src/report.hpp src/report.cpp
 	src/sai/praeparate.hpp src/sai/praeparate.cpp
 	src/sai/sequenzen.hpp src/sai/sequenzen.cpp
+	src/sai/deklarationen.hpp src/sai/deklarationen.cpp
 	src/sai/sai.hpp src/sai/sai.cpp)
 target_include_directories(sai PUBLIC "${CMAKE_SOURCE_DIR}/src" "${CMAKE_SOURCE_DIR}/src/sai")
 target_link_libraries(sai ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${XLNT_LIBRARIES})
